--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mainpage</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="source.css">
   </head>
@@ -11,7 +14,7 @@
 <body>
     <div class="back_ground_img">
         <div class="top_bar">
-            <img src="img/small_logo.png"/>
+            <img src="img/small_logo.png" width="120"/>
             <img src="img/products.png"/>
             <img src="img/how.png">
             <a type="button" class="btn btn-outline-light">Try Flashback <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
@@ -28,7 +31,20 @@
             </div>
         </div>
     </div>
-
+    <div class="description">
+      <div>
+        <h2>Enjoy Happy memory to VR</h2>
+        <p>Experience your happy memories in a whole new way by transforming them into immersive VR experiences. Relive those special moments with enhanced visuals and step back into your cherished past, all through the power of virtual reality. Rediscover joy, anytime you need it.</p>
+      </div>
+      <div>
+        <h2>Accessible treatment anytime, anywhere with ease.</h2>
+        <p>Enjoy accessible treatment anytime, anywhere with ease. Experience immersive VR therapy with no side effects and at no cost, allowing you to relive happy memories and rediscover joy whenever you need it.</p>
+      </div>
+      <div>
+        <h2>New generation of depression treatment</h2>
+        <p>Discover the new generation of depression treatment with immersive VR therapy. Relive positive memories with no side effects, no cost, and accessible anywhere, helping you find joy and relief whenever you need it.</p>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
