Changes to be committed: 네비게이션 바(topbar) 구성 	modified:   index.html 	modified:   index2.html 	modified:   source.css

--- a/index.html
+++ b/index.html
@@ -14,18 +14,20 @@
 <body>
     <div class="back_ground_img">
         <div class="top_bar">
-            <img src="img/small_logo.png" width="120"/>
-            <img src="img/products.png"/>
-            <img src="img/how.png">
-            <a type="button" class="btn btn-outline-light">Try Flashback <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
-              </svg></a>
+            <img src="img/small_logo.png" width="140"/>
+            <div>
+              <a class="dropdown" >products</a>
+              <a class="dropdown" >How to play?</a>
+              <a type="button" class="btn btn-outline-light">Try Flashback <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+                </svg></a>
+            </div>
         </div>
         <div class="hero">
             <h1 class="hero-title">Remember<br/>Your Happy Memory Like Real</h1>
             <div class="button">
                 <a type="button" class="btn btn-outline-light">Learn about it</a>
-                <a type="button" class="btn btn-outline-primary">Start it Now<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <a type="button" class="btn btn-outline-primary">Start it Now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
                   </svg></a>
             </div>
