--- a/index2.html
+++ b/index2.html
@@ -12,13 +12,15 @@
 </head>
 <body>
     <div class="container_bolcks">
-        <div class="top_bar2">
-            <img src="img/small_logo.png" width="120"/>
-            <img src="img/products.png"/>
-            <img src="img/how.png">
-            <a type="button2" class="btn btn-outline-light">Try Flashback <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
-                <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
-            </svg></a>
+        <div class="top_bar" style="background-color: black;">
+            <img src="img/small_logo.png" width="140"/>
+            <div>
+              <a class="dropdown" >products</a>
+              <a class="dropdown" >How to play?</a>
+              <a type="button" class="btn btn-outline-light">Try Flashback <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
+                </svg></a>
+            </div>
         </div>
     
         <div class="back_ground_img2">
