--- a/index2.html
+++ b/index2.html
@@ -1,53 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>subpage</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="source.css">
-</head>
-<body>
-    <div class="container_bolcks">
+<html lang="ko">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>subpage</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="source.css">
+    </head>
+    <body>
         <div class="top_bar" style="background-color: black;">
             <img src="img/small_logo.png" width="140"/>
             <div>
-              <a class="dropdown" >products</a>
-              <a class="dropdown" >How to play?</a>
-              <a type="button" class="btn btn-outline-light">Try Flashback <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
-                  <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
-                </svg></a>
+                <a href="#" class="dropdown">Products</a>
+                <a href="#" class="dropdown">How to Play?</a>
+                <a href="#" class="btn btn-outline-light">Try Flashback <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z" />
+                    </svg></a>
             </div>
         </div>
-    
-        <div class="back_ground_img2">
+        <div class="blur-bg-img position-relative">
             <h1 class="text">Flashback: Introducing Products</h1>
             <h3 class="text1">Output examples of Our Program</h3>
-    
-            <div class="test_img">
-                <img src="img/test_image.png"/>
-            </div>
-            <h4 class="img_prompt">Outpainted image 1 : Serenity on the Summit</h4>
+            <img class="rounded-5 position-absolute top-50 start-50 translate-middle test_img" src="img/test_image.png"/>
+            <h4 class="img_prompt position-absolute top-50">Outpainted image 1 : Serenity on the Summit</h4>
         </div>
-
         <div class="back_ground_img3">
             <h1 class="header_text">Transform Your Memories into Immersive VR Experiences</h1>
-            <h4 class="info_text">Using our cutting-edge AI and VR technology, this image was created<br/> to expand your personal memories into a vivid and immersive<br/> experience. By reconnecting with positive moments from your past,<br/> our program offers an emotionally uplifting journey with no side<br/> effects and at no cost. Relive your happiest memories in a new<br/> and transformative way, anywhere and anytime.</h4>
+            <h4 class="info_text">Using our cutting-edge AI and VR technology, this image was created<br /> to expand
+                your personal memories into a vivid and immersive<br /> experience. By reconnecting with positive
+                moments from your past,<br /> our program offers an emotionally uplifting journey with no side<br />
+                effects and at no cost. Relive your happiest memories in a new<br /> and transformative way, anywhere
+                and anytime.</h4>
         </div>
-
         <div class="back_ground_img4">
             <div class="example_container">
                 <h5 class="outpainting">Outpainting results</h5>
                 <h5 class="demo">Demo vidio</h5>
             </div>
-            <hr>
-            <div class="sample_img">
-                <img src="img/sample1.png"/>
+            <hr width="700">
+            <div class="sample position-relative rounded-5" style="width: 700px; height: 350px;">
+                <p class="position-absolute top-50 start-50 translate-middle">Sample 1</p>
+            </div>
+            <div class="example_container">
+                <h5 class="outpainting">Outpainting results</h5>
+                <h5 class="demo">Demo vidio</h5>
+            </div>
+            <hr width="1250">
+            <div style="display: flex;">
+                <img class="sample position-relative rounded-5" style="width: 300px; height: 550px;" src="img/test_small.png"/>
+                <div class="sample position-relative rounded-5" style="width: 300px; height: 550px;">
+                    <p class="position-absolute top-50 start-50 translate-middle">Sample 2</p>
+                </div>
+                <div class="sample position-relative rounded-5" style="width: 300px; height: 550px;">
+                    <p class="position-absolute top-50 start-50 translate-middle">Sample 3</p>
+                </div>
+                <div class="sample position-relative rounded-5" style="width: 300px; height: 550px;">
+                    <p class="position-absolute top-50 start-50 translate-middle">Sample 4</p>
+                </div>
             </div>
         </div>
-    </div>
-</body>
+    </body>
 </html>
