Changes to be committed:푸터 구현, 하이퍼링크 구현, 파일이름 변경 	modified:   index.html 	renamed:    index2.html -> info.html 	modified:   source.css

--- a/info.html
+++ b/info.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>subpage</title>
+        <title>info</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
@@ -12,10 +12,10 @@
     </head>
     <body>
         <div class="top_bar" style="background-color: black;">
-            <img src="img/small_logo.png" width="140"/>
+            <a href="/index.html"><img src="img/small_logo.png" width="140"/></a>
             <div>
                 <a href="#" class="dropdown">Products</a>
-                <a href="#" class="dropdown">How to Play?</a>
+                <a href="/info.html" class="dropdown">How to Play?</a>
                 <a href="#" class="btn btn-outline-light">Try Flashback <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z" />
                     </svg></a>
@@ -36,17 +36,16 @@
                 and anytime.</h4>
         </div>
         <div class="back_ground_img4">
-            <div class="example_container">
-                <h5 class="outpainting">Outpainting results</h5>
-                <h5 class="demo">Demo vidio</h5>
+            <div class="example_container" style="width: 700px;">
+                <h5 class="custom_font" style="margin-right: 40px;">Outpainting results</h5>
+                <h5 class="custom_font">Demo vidio</h5>
             </div>
             <hr width="700">
             <div class="sample position-relative rounded-5" style="width: 700px; height: 350px;">
                 <p class="position-absolute top-50 start-50 translate-middle">Sample 1</p>
             </div>
-            <div class="example_container">
-                <h5 class="outpainting">Outpainting results</h5>
-                <h5 class="demo">Demo vidio</h5>
+            <div class="example_container" style="width: 1200px;">
+                <h5 class="custom_font">Example of VR Output</h5>
             </div>
             <hr width="1250">
             <div style="display: flex;">
@@ -61,6 +60,9 @@
                     <p class="position-absolute top-50 start-50 translate-middle">Sample 4</p>
                 </div>
             </div>
+            <hr width="1250">
+            <p>2024 한국 코드페어 제출 작품. 팀명 : RE:Mind. 작품명 : Flashback</p>
+            <p style="margin-bottom: 15%;">팀원: 배재호 , 김민결 , 함태준</p>
         </div>
     </body>
 </html>
