--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mainpage</title>
+    <title>Flashback</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
@@ -13,10 +13,10 @@
   <body>
     <div class="back_ground_img">
         <div class="top_bar">
-          <img src="img/small_logo.png" width="140"/>
+          <img src="img/small_logo.png" width="140"/></a>
           <div>
             <a href="#" class="dropdown">Products</a>
-            <a href="#" class="dropdown">How to Play?</a>
+            <a href="/info.html" class="dropdown">How to Play?</a>
             <a href="#" class="btn btn-outline-light">Try Flashback <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
             </svg></a>
