--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="source.css">
   </head>
-  <body>
+  <body style="background-color: black;">
     <div class="back_ground_img">
         <div class="top_bar">
-          <img src="img/small_logo.png" width="140"/></a>
+          <a href="/index.html"><img src="img/small_logo.png" width="140"/></a>
           <div>
             <a href="#" class="dropdown">Products</a>
             <a href="/info.html" class="dropdown">How to Play?</a>
@@ -25,8 +25,8 @@
         <div class="hero">
             <h1 class="hero-title">Remember<br/>Your Happy Memory Like Real</h1>
             <div class="button">
-                <a type="button" class="btn btn-outline-light">Learn about it</a>
-                <a type="button" class="btn btn-outline-primary">Start it Now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
+                <a href="/info.html" type="button" class="btn btn-outline-light">Learn about it</a>
+                <a href="/index.html" type="button" class="btn btn-outline-primary">Start it Now <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0z"/>
                   </svg></a>
             </div>
