Changes to be committed: 디자인 피드백 수용 	deleted:    img/.DS_Store 	modified:   img/small_logo.png 	modified:   index.html 	modified:   info.html 	modified:   source.css 	modified:   viewer.html

--- a/viewer.html
+++ b/viewer.html
@@ -21,7 +21,7 @@
       document.addEventListener("DOMContentLoaded", function () {
         var scene = document.createElement("a-scene");
         var sky = document.createElement("a-sky");
-        sky.setAttribute("src", "static/{{file}}.png");
+        sky.setAttribute("src", "img/bgi.png");
         scene.appendChild(sky);
         document.getElementById("vr").appendChild(scene);
       });
