Changes to be committed: 일부 반응형 작업, input 페이지 마크업 	modified:   info.html 	modified:   input.html 	modified:   source.css

--- a/info.html
+++ b/info.html
@@ -24,16 +24,19 @@
         <div class="blur-bg-img position-relative">
             <h1 class="text">Flashback: Introducing Products</h1>
             <h3 class="text1">Output examples of Our Program</h3>
-            <img class="rounded-5 position-absolute top-50 start-50 translate-middle test_img" src="img/test_image.png"/>
-            <h4 class="img_prompt position-absolute top-50">Outpainted image 1 : Serenity on the Summit</h4>
+            <div class="position-absolute top-50 start-50 translate-middle">
+                <img class="rounded-5 test_img" src="img/test_image.png"/>
+                <h4 class="img_prompt">Outpainted image 1 : Serenity on the Summit</h4>
+            </div>
         </div>
         <div class="back_ground_img3">
             <h1 class="header_text">Transform Your Memories into Immersive VR Experiences</h1>
-            <h4 class="info_text">Using our cutting-edge AI and VR technology, this image was created<br /> to expand
-                your personal memories into a vivid and immersive<br /> experience. By reconnecting with positive
-                moments from your past,<br /> our program offers an emotionally uplifting journey with no side<br />
-                effects and at no cost. Relive your happiest memories in a new<br /> and transformative way, anywhere
-                and anytime.</h4>
+            <h4 class="info_text">Using our cutting-edge AI and VR technology, this image was created<br/> 
+                to expand your personal memories into a vivid and immersive<br/>
+                experience. By reconnecting with positive moments from your past,<br/>
+                our program offers an emotionally uplifting journey with no side<br/>
+                effects and at no cost. Relive your happiest memories in a new<br/>
+                and transformative way, anywhere and anytime.</h4>
         </div>
         <div class="back_ground_img4">
             <div class="example_container" style="width: 700px;">
