--- a/input.html
+++ b/input.html
@@ -20,16 +20,16 @@
           <label class="form-check-label" for="flexSwitchCheckDefault">Default switch checkbox input</label>
           <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
         </div>
-        <div class="file-input">
+        <div class="custom-input">
           <h5>Upload Image</h5>
-          <label for="image">import image</label>
+          <label class="rounded-3" for="image"> Upload</label>
           <input type="file" id="image" name="image">
         </div>
-        <div class="file-input">
+        <div class="custom-input">
           <h5>Explain Your image</h5>
-          <textarea name="prompt" form="input-form"></textarea>
+          <textarea class="rounded-3" name="prompt" form="input-form" placeholder="Explain The background you would like to add around"></textarea>
         </div>
-          <input type="submit" class="img-button" value="" onclick="alert('클릭!')">
+        <input type="submit" class="img-button" value="" onclick="alert('클릭!')">
       </form>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
