--- a/input.html
+++ b/input.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="source.css">
   </head>
-  <body>
+  <body style="display: flex;">
     <div class="left">
       <div class="top_bar">
         <a href="/index.html"><img src="img/small_logo.png" width="140"/></a>
@@ -32,6 +32,12 @@
         <input type="submit" class="img-button" value="" onclick="alert('클릭!')">
       </form>
     </div>
+
+  <div class="right">
+    <div class="image-container">
+      <img src="/img/test_image.png"/>
+    </div>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
       //자바스크립트 쓰기 실허어ㅓㅓㅓㅓㅓㅓ
