--- a/input.html
+++ b/input.html
@@ -10,38 +10,48 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="source.css">
   </head>
-  <body style="display: flex;">
-    <div class="left">
-      <div class="top_bar">
-        <a href="/index.html"><img src="img/small_logo.png" width="140"/></a>
+  <body>
+    <div class="container">
+      <div class="left">
+        <div class="top_bar">
+          <a href="/index.html">
+          <img src="img/small_logo.png" width="140"/></a>
+        </div>
+        <form action="/post_image" method="post" enctype="multipart/form-data" id="input-form">
+          <div class="form-check form-switch">
+            <label class="form-check-label" for="flexSwitchCheckDefault">Remix mode</label>
+            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+          </div>
+          <div class="custom-input">
+            <h5>Upload Image</h5>
+            <label class="rounded-3" for="image">Upload</label>
+            <input type="file" id="image" name="image">
+          </div>
+          <div class="custom-input">
+            <h5>Explain Your image</h5>
+            <textarea class="rounded-3" name="prompt" form="input-form" placeholder="Explain The background you would like to add around"></textarea>
+          </div>
+          <input type="submit" class="img-button" value="" onclick="alert('클릭!')">
+        </form>
       </div>
-      <form action="/post_image" method=post enctype=multipart/form-data id="input-form">
-        <div class="form-check form-switch">
-          <label class="form-check-label" for="flexSwitchCheckDefault">Default switch checkbox input</label>
-          <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+
+
+
+      <div class="right">
+        <div class="image-container">
+          <img src="/img/test_image.png"/>
         </div>
-        <div class="custom-input">
-          <h5>Upload Image</h5>
-          <label class="rounded-3" for="image"> Upload</label>
-          <input type="file" id="image" name="image">
+        <div class="storyboard">
+          <h5>Explain Storyboard</h5>
+          <textarea placeholder="Describe the storyboard here"></textarea>
+          <div class="buttons">
+            <button class="button-vr">Make VR</button>
+            <button class="button-next">Next</button>
+          </div>
         </div>
-        <div class="custom-input">
-          <h5>Explain Your image</h5>
-          <textarea class="rounded-3" name="prompt" form="input-form" placeholder="Explain The background you would like to add around"></textarea>
-        </div>
-        <input type="submit" class="img-button" value="" onclick="alert('클릭!')">
-      </form>
+      </div>
     </div>
 
-  <div class="right">
-    <div class="image-container">
-      <img src="/img/test_image.png"/>
-    </div>
-  </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script>
-      //자바스크립트 쓰기 실허어ㅓㅓㅓㅓㅓㅓ
-
-    </script>
   </body>
 </html>
