--- a/input.html
+++ b/input.html
@@ -36,17 +36,18 @@
       </div>
 
 
-
-      <div class="right">
-        <div class="image-container">
-          <img src="/img/test_image.png"/>
-        </div>
-        <div class="storyboard">
-          <h5>Explain Storyboard</h5>
-          <textarea placeholder="Describe the storyboard here"></textarea>
-          <div class="buttons">
-            <button class="button-vr">Make VR</button>
-            <button class="button-next">Next</button>
+      <div class="container2">
+        <div class="right">
+          <div class="image-container">
+            <img src="/img/test_image.png"/>
+          </div>
+          <div class="storyboard">
+            <h5>Explain Storyboard</h5>
+            <textarea placeholder="Describe the storyboard here"></textarea>
+            <div class="buttons">
+              <button class="button-vr">Make VR</button>
+              <button class="button-next">Next</button>
+            </div>
           </div>
         </div>
       </div>
