--- a/input.html
+++ b/input.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="source.css">
   </head>
   <body>
-    <div class="container">
+    <div class="split-box">
       <div class="left">
         <div class="top_bar">
           <a href="/index.html">
@@ -34,20 +34,16 @@
           <input type="submit" class="img-button" value="" onclick="alert('클릭!')">
         </form>
       </div>
-
-
-      <div class="container2">
-        <div class="right">
-          <div class="image-container">
-            <img src="/img/test_image.png"/>
-          </div>
-          <div class="storyboard">
-            <h5>Explain Storyboard</h5>
-            <textarea placeholder="Describe the storyboard here"></textarea>
-            <div class="buttons">
-              <button class="button-vr">Make VR</button>
-              <button class="button-next">Next</button>
-            </div>
+      <div class="right">
+        <div class="image-container">
+          <img src="/img/test_image.png"/>
+        </div>
+        <div class="storyboard">
+          <h5>Explain Storyboard</h5>
+          <textarea placeholder="Describe the storyboard here"></textarea>
+          <div class="buttons">
+            <button class="button-vr">Make VR</button>
+            <button class="button-next">Next</button>
           </div>
         </div>
       </div>
