비율 바꾸기~

--- a/info.html
+++ b/info.html
@@ -23,9 +23,9 @@
         </div>
         <div class="blur-bg-img position-relative">
             <h1 class="text">Flashback: Introducing Products</h1>
-            <h3 class="text1">Output examples of Our Program</h3>
-            <div class="position-absolute top-50 start-50 translate-middle">
-                <img class="rounded-5 test_img" src="img/test_image.png"/>
+            <h2 class="text1">Output examples of Our Program</h2>
+            <div class="img_container">
+                <img class="test_img" src="img/test_image.png"/>
                 <h4 class="img_prompt">Outpainted image 1 : Serenity on the Summit</h4>
             </div>
         </div>
