Changes to be committed: 프론트 끝 아마도 	modified:   input.html 	modified:   script.js 	modified:   source.css

--- a/input.html
+++ b/input.html
@@ -14,8 +14,7 @@
     <div class="split-box">
       <div class="left">
         <div class="top_bar">
-          <a href="/index.html">
-          <img src="img/small_logo.png" width="140"/></a>
+          <a href="/index.html"><img src="img/small_logo.png" width="140"/></a>
         </div>
         <div id="input-form">
           <div class="form-check form-switch">
@@ -36,6 +35,12 @@
       </div>
       <div id="right">
         <h2>인풋에너으세요ㅛ</h2>
+        <!-- 로딩 오버레이 추가 -->
+        <div id="loading-overlay">
+          <div class="spinner-border text-secondary" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+        </div>
       </div>
     </div>
     <script src="script.js"></script>
